[package]
name = "file-loader"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/file_loader.rs"

[dependencies]
magic-crypt = "3.1.8"

[dependencies.file-loader-procedural]
git = "https://github.com/DmitrijVC/file-loader-procedural"
version = "1.0.0"

[dependencies.strenc]
git = "https://github.com/DmitrijVC/strenc"
